--- a/styles/nav.module.scss
+++ b/styles/nav.module.scss
@@ -1,5 +1,6 @@
 .menu {
   height: 100vh;
+  height: 100dvh;
   background: var(--black-100, #111);
   position: fixed;
   right: 0;
