--- a/styles/page-wrapper.module.scss
+++ b/styles/page-wrapper.module.scss
@@ -15,6 +15,7 @@
   display: flex;
   width: auto;
   height: 100vh;
+  height: 100dvh;
   flex-direction: column;
   align-items: center;
   background: var(--black-100, #111);
